--- a/Vidly/Views/Vehicles/Index.cshtml
+++ b/Vidly/Views/Vehicles/Index.cshtml
@@ -6,8 +6,6 @@
 
 <h2>Vehicles Overlaping</h2>
 
-
-
 <!-- This is the div that will contain the Google Map -->
 <div id="map" style="width: 100%; height: 500px"></div>
 
@@ -27,12 +25,10 @@
             function getJsonData() {
                 $.ajax({
                     type: 'POST',
-                    url: '/Vehicles/GetJsonData1041',
+                    url: '/Vehicles/GetJsonDataData',
                     dataType: 'json',
                     success: function(myControllerJsonData) {
-                        handleData(myControllerJsonData);
-                        // debugger;
-
+                        handleData(myControllerJsonData);                     
                     }
                 });
             }
@@ -41,44 +37,27 @@
 
             function handleData(data) {
 
-                var vehicle_1041 = [];
-                var vehicle_1949 = [];
-                var vehicle_969 = [];
+                var vehicle1041 = [];
+                var vehicle1949 = [];
+                var vehicle969 = [];
 
                 $.each(data, function(i, item) {
                     if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
                         'getRawData?objectId=1041&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
-                        vehicle_1041.push({ lat: item.latitude, lng: item.longitude });
+                        vehicle1041.push({ lat: item.latitude, lng: item.longitude });
                     } else if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
                         'getRawData?objectId=1949&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
-                        vehicle_1949.push({ lat: item.latitude, lng: item.longitude });
+                        vehicle1949.push({ lat: item.latitude, lng: item.longitude });
                     } else if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
                         'getRawData?objectId=969&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
-                        vehicle_969.push({ lat: item.latitude, lng: item.longitude });
+                        vehicle969.push({ lat: item.latitude, lng: item.longitude });
                     }
 
                 });
-
-                // Define the LatLng coordinates for the polygon's path.
-                var triangleCoords = [
-                    { lat: 25.774, lng: -80.190 },
-                    { lat: 18.466, lng: -66.118 },
-                    { lat: 32.321, lng: -64.757 },
-                    { lat: 25.774, lng: -80.190 },
-                ];
-
-
-                var oneMore = [
-                    { lat: 24.774, lng: -79.190 },
-                    { lat: 17.466, lng: -65.118 },
-                    { lat: 31.321, lng: -63.757 },
-                    { lat: 24.774, lng: -79.190 },
-                ];
-
-
-                //vehicle_1041 - dzeltens 
+        
+                //vehicle_1041 - yellow polygon 
                 var est1 = new google.maps.Polygon({
-                    paths: vehicle_1041,
+                    paths: vehicle1041,
                     strokeColor: '#000000',
                     strokeOpacity: 0.8,
                     strokeWeight: 2,
@@ -86,9 +65,9 @@
                     fillOpacity: 0.35
                 });
 
-                //vehicle_1949 - sarkans 
+                //vehicle_1949 - red polygon 
                 var est2 = new google.maps.Polygon({
-                    paths: vehicle_1949,
+                    paths: vehicle1949,
                     strokeColor: '#b30000',
                     strokeOpacity: 0.8,
                     strokeWeight: 2,
@@ -96,9 +75,9 @@
                     fillOpacity: 0.35
                 });
 
-                //vehicle_969 - zils 
+                //vehicle_969 - blue polygon  
                 var est3 = new google.maps.Polygon({
-                    paths: vehicle_969,
+                    paths: vehicle969,
                     strokeColor: '#0066ff',
                     strokeOpacity: 0.8,
                     strokeWeight: 2,
@@ -107,43 +86,32 @@
                 });
 
 
+                // put in some information about each json object - in this case, the opening hours.
+                var infowindow = new google.maps.InfoWindow({
+                    content: "<div class='infoDiv'><h2>" + "Numberplate: " + 'lol' + "\n"
+                        + "Address: " + 'aass' + "</div></div>"
+                });
+
                 est1.setMap(map);
                 est2.setMap(map);
                 est3.setMap(map);
 
-                est1.addListener('click', showArrays('number1')),
-                est2.addListener('click', showArrays('number2'));
-                est3.addListener('click', showArrays('number3'));
-
-
-                function showArrays(number) {
-                    if (number === 'number1') {
-                        alert(google.maps.geometry.spherical.computeArea(est1.getPath()));
-                    } else if (number === 'number2') {
-                        alert(google.maps.geometry.spherical.computeArea(est2.getPath()));
-                    } else if (number === 'number3') {
-                        alert(google.maps.geometry.spherical.computeArea(est3.getPath()));
-                    }
+                google.maps.event.addListener(est1, 'click', function () {
+                    alert(convertToHectars(this));
+                });
+                google.maps.event.addListener(est2, 'click', function () {
+                    alert(convertToHectars(this));
+                });
+                google.maps.event.addListener(est3, 'click', function () {
+                    alert(convertToHectars(this));
+                });
+         
+                function convertToHectars(parameter) {
+                    var lol = google.maps.geometry.spherical.computeArea(parameter.getPath()) * 0.001;
+                    var roundedValue = Math.round(lol);
+                    return 'Area is '+ roundedValue + ' ha large';
                 }
-
-
-                est1_area = google.maps.geometry.spherical.computeArea(est1.getPath()),
-                est2_area = google.maps.geometry.spherical.computeArea(est2.getPath());
-                est3_area = google.maps.geometry.spherical.computeArea(est3.getPath());
-
-                // alert('My area left: ' + areaLeft);
-                // alert('My area left: ' + areaRight);
-
-                // LOG: Check your console
-                console.table([
-                    { area: est1_area },
-                    { area: est2_area },
-                    { area: est3_area }
-                ]);
-
-
             }
-
             //ends handleData function
         }
 
@@ -154,7 +122,7 @@
 <br>
 @if (!Model.Any())
 {
-    <h1>Sorry, server error</h1>
+    <h1>Sorry, can't connect to server</h1>
 }
 else
 {
@@ -164,16 +132,13 @@ else
                 <th>Object Name</th>
                 <th>Latitude</th>
             </tr>
-
         </thead>
         <tbody>
             <tr>
                 <td>klllll</td>
                 <td>18292.00ha</td>
             </tr>
-
         </tbody>
-
     </table>
 }
 
