--- a/Vidly/Views/Vehicles/Index.cshtml
+++ b/Vidly/Views/Vehicles/Index.cshtml
@@ -12,6 +12,7 @@
 @section scripts {
 
     <script>
+        var areas = [];
         function initMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 11,
@@ -25,7 +26,7 @@
                     url: '/Vehicles/GetJsonDataData',
                     dataType: 'json',
                     success: function(myControllerJsonData) {
-                        handleData(myControllerJsonData);                     
+                        handleData(myControllerJsonData);
                     }
                 });
             }
@@ -51,86 +52,80 @@
                     }
 
                 });
-        
-                //vehicle_1041 - yellow polygon 
-                var est1 = new google.maps.Polygon({
-                    paths: vehicle1041,
-                    strokeColor: '#000000',
-                    strokeOpacity: 0.8,
-                    strokeWeight: 2,
-                    fillColor: '#ffff00',
-                    fillOpacity: 0.35
-                });
 
-                //vehicle_1949 - red polygon 
-                var est2 = new google.maps.Polygon({
-                    paths: vehicle1949,
-                    strokeColor: '#b30000',
-                    strokeOpacity: 0.8,
-                    strokeWeight: 2,
-                    fillColor: '#b30000',
-                    fillOpacity: 0.35
-                });
+                var est1 = createPolygonObject(vehicle1041, '#ffff00');
+                var est2 = createPolygonObject(vehicle1949, '#b30000');
+                var est3 = createPolygonObject(vehicle969, '#0066ff');
 
-                //vehicle_969 - blue polygon  
-                var est3 = new google.maps.Polygon({
-                    paths: vehicle969,
-                    strokeColor: '#0066ff',
-                    strokeOpacity: 0.8,
-                    strokeWeight: 2,
-                    fillColor: '#0066ff',
-                    fillOpacity: 0.35
-                });
+                putPoligonOnMapAndListener(est1);
+                putPoligonOnMapAndListener(est2);
+                putPoligonOnMapAndListener(est3);
 
-                est1.setMap(map);
-                est2.setMap(map);
-                est3.setMap(map);
+                function createPolygonObject(dataa, color) {
+                    var polygonObject = new google.maps.Polygon({
+                        paths: dataa,
+                        strokeColor: '#000000',
+                        strokeOpacity: 0.8,
+                        strokeWeight: 2,
+                        fillColor: color,
+                        fillOpacity: 0.35
+                    });
+                    return polygonObject;
+                }
 
-                google.maps.event.addListener(est1, 'click', function () {
-                    alert(convertToHectars(this) + 'asdas');
-                });
-                google.maps.event.addListener(est2, 'click', function () {
-                    alert(convertToHectars(this));
-                });
-                google.maps.event.addListener(est3, 'click', function () {
-                    alert(convertToHectars(this));
-                });
-         
+
+                function putPoligonOnMapAndListener(polygonObejct) {
+                    polygonObejct.setMap(map);
+                    google.maps.event.addListener(polygonObejct, 'click', function () {
+                        alert(convertToHectars(this));
+                    });
+                }
+
                 function convertToHectars(parameter) {
                     var lol = google.maps.geometry.spherical.computeArea(parameter.getPath()) * 0.001;
                     var roundedValue = Math.round(lol);
-                    return 'Area is '+ roundedValue + ' hectares large';
+                    return 'Area is ' + roundedValue + ' hectares large';
                 }
-            }
-          
-        }
 
+                areas.push(google.maps.geometry.spherical.computeArea(est1.getPath()) * 0.001);
+                areas.push(google.maps.geometry.spherical.computeArea(est2.getPath()) * 0.001);
+                areas.push(google.maps.geometry.spherical.computeArea(est3.getPath()) * 0.001);
+
+
+                $.each(areas, function(i, item) {
+                    $('#lolo tbody').append('<tr><td>' + Math.round(item) + '</td></tr>');
+                });
+
+                //$('tbody tr').click(function(item) {
+                //    alert($(this).text());
+                //    console.log(item);
+
+                //});
+            }
+
+        }
     </script>
 }
 
 <br>
 <br>
-@*@if (!Model.Any())
+
+@if (!Model.Any())
 {
     <h1>Sorry, can't connect to server</h1>
 }
 else
 {
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover" id="lolo">
         <thead>
             <tr>
-                <th>Object Name</th>
                 <th>Area in hectares</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>klllll</td>
-                <td>18292.00ha</td>
-            </tr>
         </tbody>
     </table>
-}*@
+}
 
 
 
