--- a/Vidly/Views/Vehicles/Index.cshtml
+++ b/Vidly/Views/Vehicles/Index.cshtml
@@ -23,7 +23,7 @@
             function getJsonData() {
                 $.ajax({
                     type: 'POST',
-                    url: '/Vehicles/GetJsonDataData',
+                    url: '/Vehicles/GetJsonData',
                     dataType: 'json',
                     success: function(myControllerJsonData) {
                         handleData(myControllerJsonData);
