--- a/Vidly/Views/Vehicles/Index.cshtml
+++ b/Vidly/Views/Vehicles/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Vehicles Overlaping</h2>
+<h2>Overlapping</h2>
 
 <!-- This is the div that will contain the Google Map -->
 <div id="map" style="width: 100%; height: 500px"></div>
