--- a/Vidly/Views/Home/ShowPolygonInfo.cshtml
+++ b/Vidly/Views/Home/ShowPolygonInfo.cshtml
@@ -1,62 +1,18 @@
-﻿
-
-@model Vidly.Models.Vehicle
+﻿@model IEnumerable<Vidly.Models.Vehicle>
 
 @{
-    ViewBag.Title = "Action";
+    ViewBag.Title = "ActioShowPolygonInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Form</h2>
-
-
-@using(Html.BeginForm("Create","Vehicles"))
-{
-    
-    <div class="form-group input-group-sm">
-        @Html.LabelFor(m => m.timestamp)
-        @Html.TextBoxFor(model => model.timestamp, new { @class = "form-control datepicker", placeholder = "Enter Drop-off date here..." })
-        @*@Html.ValidationMessageFor(model => model.timestamp)*@
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Save</button>
-    
-}
-
-
-@section scripts {
-
-    <section class="scripts">
-    <script type="text/javascript">
-        
-        $(function () { // will trigger when the document is ready
-            //$('.datepicker').datepicker(); //Initialise any date pickers
-            alert('adsasd');
-        });
-
-     </script>
-    </section>
-}
-
-
-
-
-
-
-
-
-@*@model IEnumerable<Vidly.Models.Vehicle>
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
 <h2>Overlapping</h2>
 
 <!-- This is the div that will contain the Google Map -->
-<div id="map" style="width: 100%; height: 500px"></div>*@
+<div id="map" style="width: 100%; height: 500px"></div>
 
-@*@section scripts {
+
+@section scripts {
 
     <script>
         var areas = [];
@@ -70,9 +26,10 @@
             function getJsonData() {
                 $.ajax({
                     type: 'POST',
-                    url: '/Vehicles/GetJsonData',
+                    url: '/Home/JsonForPolygons',
                     dataType: 'json',
-                    success: function(myControllerJsonData) {
+                    success: function (myControllerJsonData) {
+                        debugger;
                         handleData(myControllerJsonData);
                     }
                 });
@@ -87,14 +44,11 @@
                 var vehicle969 = [];
 
                 $.each(data, function(i, item) {
-                    if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
-                        'getRawData?objectId=1041&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
+                    if (item.ObjectId === 969) {
                         vehicle1041.push({ lat: item.latitude, lng: item.longitude });
-                    } else if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
-                        'getRawData?objectId=1949&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
+                    } else if (item.ObjectId === 1949) {
                         vehicle1949.push({ lat: item.latitude, lng: item.longitude });
-                    } else if (item.objectName === 'https://apps.oskando.ee/seeme/Api/Vehicles/' +
-                        'getRawData?objectId=969&begTimestamp=2013-02-01&endTimestamp=2013-02-02&key=proovitoo1') {
+                    } else if (item.ObjectId === 1041) {
                         vehicle969.push({ lat: item.latitude, lng: item.longitude });
                     }
 
@@ -152,12 +106,12 @@
 
         }
     </script>
-}*@
+}
 
 <br>
 <br>
 
-@*@if (!Model.Any())
+@if (!Model.Any())
 {
     <h1>Sorry, can't connect to server</h1>
 }
@@ -172,10 +126,6 @@ else
         <tbody>
         </tbody>
     </table>
-}*@
-
-
-
-
+}
 
 
