--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Current info","Index","Home")</li>
-                <li>@Html.ActionLink("Polygons","Index","Vehicles")</li>
+                <li>@Html.ActionLink("Polygons","DataInput","Home")</li>
             </ul>
         </div>
     </div>
