Added date picker, link input

--- a/Vidly/Views/Home/ArgumentError.cshtml
+++ b/Vidly/Views/Home/ArgumentError.cshtml
@@ -1,7 +1,1 @@
-﻿
-@{
-    ViewBag.Title = "ArgumentError";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Please enter valid url</h2>
+﻿<h2>Please enter valid information</h2>
