--- a/Vidly/Views/Home/ShowPolygonInfo.cshtml
+++ b/Vidly/Views/Home/ShowPolygonInfo.cshtml
@@ -8,6 +8,17 @@
 
 <h2>Overlapping</h2>
 
+@using (Html.BeginForm("ShowPolygonInfo", "Home"))
+{
+
+    <div class="form-group">
+        <input type="text" id="MyDate" name="date"/>
+        <br/>
+        <br/>
+        <button type="submit" class="btn btn-primary">OK</button>
+    </div>
+}
+
 <!-- This is the div that will contain the Google Map -->
 <div id="map" style="width: 100%; height: 500px"></div>
 
@@ -105,6 +116,10 @@
             }
 
         }
+
+        $(document).ready(function () {
+            $('#MyDate').datepicker();
+        });
     </script>
 }
 
