--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -8,6 +8,16 @@
     <link href="~/Content/Custom.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-loomen.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+
+
+  @* <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC19q9T1ulHBwjg2NMf02dASinjNaAKLZI&callback=initMap&libraries=geometry,places"></script>*@
+
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    @*<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
+
 </head>
 <body>
     @Html.Partial("_NavBar")
@@ -19,12 +29,17 @@
         </footer>
     </div>
 
-    @* TODO could create bundles for jquery and bootstrap  *@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC19q9T1ulHBwjg2NMf02dASinjNaAKLZI&callback=initMap&libraries=geometry,places"></script>
 
+    @* script for date *@
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    @RenderSection("scripts", required: false)
+    @* validation script *@
+<script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+@RenderSection("scripts", required: false)
 </body>
 </html>
