--- a/Vidly/Views/Vehicles/Action.cshtml
+++ b/Vidly/Views/Vehicles/Action.cshtml
@@ -12,8 +12,8 @@
 {
 
     <div class="form-group">
-        @Html.LabelFor(m => m.url)
-        @Html.TextBoxFor(m => m.url, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Url)
+        @Html.TextBoxFor(m => m.Url, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.address)
