--- a/Vidly/Views/Vehicles/Index.cshtml
+++ b/Vidly/Views/Vehicles/Index.cshtml
@@ -70,7 +70,7 @@
             function getJsonData() {
                 $.ajax({
                     type: 'POST',
-                    url: '/Vehicles/GetJsonData',
+                    Url: '/Vehicles/GetJsonData',
                     dataType: 'json',
                     success: function(myControllerJsonData) {
                         handleData(myControllerJsonData);
