added demo for overlapping

--- a/Vidly/Views/Home/GetInfo.cshtml
+++ b/Vidly/Views/Home/GetInfo.cshtml
@@ -137,8 +137,7 @@ else
             @foreach (var vehicle in Model)
             {
                 <tr>
-                    <td>
-                    <input type="checkbox" id="@vehicle.objectName" checked></td>
+                    <td><input type="checkbox" id="@vehicle.objectName" checked></td>
                     <td>@vehicle.address</td>
                     <td>@vehicle.objectName</td>
                     <td>@vehicle.speed</td>
