--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -10,8 +10,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                @*<li>@Html.ActionLink("Current info","Index","Home")</li>
-                <li>@Html.ActionLink("Polygons","DataInput","Home")</li>*@
+                <li>@Html.ActionLink("Polygon overlapping demo","Demo","Home")</li>
+                 @*<li>@Html.ActionLink("Polygons","DataInput","Home")</li>*@
             </ul>
         </div>
     </div>
