--- a/Vidly/Views/Home/ShowPolygonInfo.cshtml
+++ b/Vidly/Views/Home/ShowPolygonInfo.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<Vidly.Models.Vehicle>
 
 @{
-    ViewBag.Title = "ActioShowPolygonInfo";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "ActioShowPolygonInfo";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
@@ -10,117 +10,124 @@
 
 @using (Html.BeginForm("ShowPolygonInfo", "Home"))
 {
-
-    <div class="form-group">
-        <input type="text" id="MyDate" name="date"/>
-        <br/>
-        <br/>
-        <button type="submit" class="btn btn-primary">OK</button>
-    </div>
+	<div class="form-group">
+		<input type="text" id="MyDate" name="date"/>
+		<br/>
+		<br/>
+		<button type="submit" class="btn btn-primary">OK</button>
+	</div>
 }
 
-<!-- This is the div that will contain the Google Map -->
 <div id="map" style="width: 100%; height: 500px"></div>
 
 
 @section scripts {
 
-    <script>
-        var areas = [];
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 11,
-                center: { lat: 58.3776, lng: 26.7290 },
-                mapTypeId: 'terrain'
-            });
+	<script>
+		
+		var uniqueObejctId = [];
+		var map;
 
-            function getJsonData() {
-                $.ajax({
-                    type: 'POST',
-                    url: '/Home/JsonForPolygons',
-                    dataType: 'json',
-                    success: function (myControllerJsonData) {
-                        debugger;
-                        handleData(myControllerJsonData);
-                    }
-                });
-            }
+		function initMap() {
 
-            getJsonData();
+			map = new google.maps.Map(document.getElementById('map'), {
+				zoom: 11,
+				center: { lat: 58.3776, lng: 26.7290 },
+				mapTypeId: 'terrain'
+			});
 
-            function handleData(data) {
+			function getJsonData() {
+				$.ajax({
+					type: 'POST',
+					url: '/Home/JsonForPolygons',
+					dataType: 'json',
+					success: function(myControllerJsonData) {
+						handleData(myControllerJsonData);
+					}
+				});
+			}
 
-                var vehicle1041 = [];
-                var vehicle1949 = [];
-                var vehicle969 = [];
+			getJsonData();
 
-                $.each(data, function(i, item) {
-                    if (item.ObjectId === 969) {
-                        vehicle1041.push({ lat: item.latitude, lng: item.longitude });
-                    } else if (item.ObjectId === 1949) {
-                        vehicle1949.push({ lat: item.latitude, lng: item.longitude });
-                    } else if (item.ObjectId === 1041) {
-                        vehicle969.push({ lat: item.latitude, lng: item.longitude });
-                    }
+			function handleData(data) {
 
-                });
+				var vehicle1041 = [];
+				var vehicle1949 = [];
+				var vehicle969 = [];
 
-                var est1 = createPolygonObject(vehicle1041, '#ffff00');
-                var est2 = createPolygonObject(vehicle1949, '#b30000');
-                var est3 = createPolygonObject(vehicle969, '#0066ff');
+				//getting unique IdValues
+				var idKeys = [];
+				$.each(data, function(i, item) {
+					idKeys.push(item.ObjectId);
+				});
 
-                putPoligonOnMapAndListener(est1);
-                putPoligonOnMapAndListener(est2);
-                putPoligonOnMapAndListener(est3);
+				function arrNoDupe(a) {
+					var temp = {};
+					for (var i = 0; i < a.length; i++)
+						temp[a[i]] = true;
+					return Object.keys(temp);
+				}
 
-                function createPolygonObject(dataa, color) {
-                    var polygonObject = new google.maps.Polygon({
-                        paths: dataa,
-                        strokeColor: '#000000',
-                        strokeOpacity: 0.8,
-                        strokeWeight: 2,
-                        fillColor: color,
-                        fillOpacity: 0.35
-                    });
-                    return polygonObject;
-                }
+				uniqueObejctId = arrNoDupe(idKeys);
+				
+				$.each(data, function(i, item) {
+					if (item.ObjectId === 969) {
+						vehicle1041.push({ lat: item.latitude, lng: item.longitude });
+					} else if (item.ObjectId === 1949) {
+						vehicle1949.push({ lat: item.latitude, lng: item.longitude });
+					} else if (item.ObjectId === 1041) {
+						vehicle969.push({ lat: item.latitude, lng: item.longitude });
+					}
 
+				});
 
-                function putPoligonOnMapAndListener(polygonObejct) {
-                    polygonObejct.setMap(map);
-                    google.maps.event.addListener(polygonObejct, 'click', function () {
-                        alert(convertToHectars(this));
-                    });
-                }
+				var est1 = createPolygonObject(vehicle1041, '#ffff00');
+				var est2 = createPolygonObject(vehicle1949, '#b30000');
+				var est3 = createPolygonObject(vehicle969, '#0066ff');
 
-                function convertToHectars(parameter) {
-                    var lol = google.maps.geometry.spherical.computeArea(parameter.getPath()) * 0.001;
-                    var roundedValue = Math.round(lol);
-                    return 'Area is ' + roundedValue + ' hectares large';
-                }
-
-                areas.push(google.maps.geometry.spherical.computeArea(est1.getPath()) * 0.001);
-                areas.push(google.maps.geometry.spherical.computeArea(est2.getPath()) * 0.001);
-                areas.push(google.maps.geometry.spherical.computeArea(est3.getPath()) * 0.001);
+				putPoligonOnMapAndListener(est1);
+				putPoligonOnMapAndListener(est2);
+				putPoligonOnMapAndListener(est3);
 
 
-                $.each(areas, function(i, item) {
-                    $('#lolo tbody').append('<tr><td>' + Math.round(item) + '</td></tr>');
-                });
+				areas.push(google.maps.geometry.spherical.computeArea(est1.getPath()) * 0.001);
+				areas.push(google.maps.geometry.spherical.computeArea(est2.getPath()) * 0.001);
+				areas.push(google.maps.geometry.spherical.computeArea(est3.getPath()) * 0.001);
 
-                //$('tbody tr').click(function(item) {
-                //    alert($(this).text());
-                //    console.log(item);
+				function createPolygonObject(data, color) {
+					var polygonObject = new google.maps.Polygon({
+						paths: data,
+						strokeColor: '#000000',
+						strokeOpacity: 0.8,
+						strokeWeight: 2,
+						fillColor: color,
+						fillOpacity: 0.35
+					});
+					return polygonObject;
+				}
 
-                //});
-            }
+				function putPoligonOnMapAndListener(polygonObejct) {
+					polygonObejct.setMap(map);
+					google.maps.event.addListener(polygonObejct, 'click', function() {
+						alert(convertToHectars(this));
+					});
+				}
 
-        }
+				function convertToHectars(parameter) {
+					var hectaresOut = google.maps.geometry.spherical.computeArea(parameter.getPath()) * 0.001;
+					var roundedHectares = Math.round(hectaresOut);
+					return 'Area is ' + roundedHectares + ' hectares large';
+				}
 
-        $(document).ready(function () {
-            $('#MyDate').datepicker();
-        });
-    </script>
+			}
+
+		}
+
+		//setting date picker 
+		$(document).ready(function() {
+			$('#MyDate').datepicker();
+		});
+	</script>
 }
 
 <br>
@@ -128,19 +135,18 @@
 
 @if (!Model.Any())
 {
-    <h1>Sorry, can't connect to server</h1>
+	<h1>Sorry, can't connect to server</h1>
 }
 else
 {
-    <table class="table table-bordered table-hover" id="lolo">
-        <thead>
-            <tr>
-                <th>Area in hectares</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+	<table class="table table-bordered table-hover">
+		<thead id="tableHead">
+		 
+		</thead>
+		<tbody id="tableBody">
+
+		</tbody>
+	</table>
 }
 
 
