--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -10,13 +10,9 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 
 
-  @* <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC19q9T1ulHBwjg2NMf02dASinjNaAKLZI&callback=initMap&libraries=geometry,places"></script>*@
-
-
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    @*<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
+
+
 
 </head>
 <body>
@@ -34,17 +30,19 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC19q9T1ulHBwjg2NMf02dASinjNaAKLZI&callback=initMap&libraries=geometry,places,drawing"></script>
 
     @* script for date *@
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     @* validation script *@
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
     @* script for calculations *@
-<script src="http://arthur-e.github.io/Wicket/wicket.js"></script>
+    <script src="http://arthur-e.github.io/Wicket/wicket.js"></script>
     <script src="http://arthur-e.github.io/Wicket/wicket-gmap3.js"></script>
     <script src="http://bl.ocks.org/christophermanning/raw/4450188/javascript.util.min.js"></script>
-    <script src="http://bl.ocks.org/christophermanning/raw/4450188/jsts.min.js"></script>
+<script src="http://bl.ocks.org/christophermanning/raw/4450188/jsts.min.js"></script>
+
+    <script src="https://cdn.rawgit.com/bjornharrtell/jsts/gh-pages/1.1.2/jsts.min.js"></script>
 
 
 @RenderSection("scripts", required: false)
